--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 
-<title>BRAIAIN — Can You Spot the AI? | Free Daily AI Detection Game</title>
+<title>BRAIAIN — The Voight-Kampff Test for the AI Age | Free Daily AI Detection Game</title>
 
 <!-- SEO -->
-<meta name="description" content="Free daily AI detection game — 10 rounds, are you looking at a real photo or an AI-generated fake? Train your eye, build your streak, share your score. New challenge every day. No signup required.">
-<meta name="keywords" content="AI detection game, real or fake, spot the AI, AI image detection, daily AI challenge, AI vs real photos, can you spot AI, AI generated images, fake photo detector, AI art game, real vs AI, deepfake game, AI photo quiz, detect AI images, is it AI, human or AI, AI image quiz, free AI game, daily brain game, AI awareness, spot the fake, real or AI generated, AI detection test, AI image challenge, braiain">
+<meta name="description" content="The Voight-Kampff test for the AI age — a free daily game where you decide: real photo or AI-generated fake? 10 rounds, pro tips, streak tracking. Train your eye to detect AI. New challenge every day.">
+<meta name="keywords" content="AI detection game, real or fake, spot the AI, voight-kampff test, turing test, AI image detection, daily AI challenge, AI vs real photos, can you spot AI, AI generated images, fake photo detector, AI art game, real vs AI, deepfake game, AI photo quiz, detect AI images, is it AI, human or AI, AI image quiz, free AI game, daily brain game, AI awareness, spot the fake, real or AI generated, AI detection test, AI image challenge, blade runner, do androids dream, replicant test, braiain">
 <meta name="author" content="BRAIAIN">
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 <link rel="canonical" href="https://braiain.com/">
@@ -21,8 +21,8 @@
 <!-- Open Graph -->
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="BRAIAIN">
-<meta property="og:title" content="BRAIAIN — Can You Spot the AI? | Free Daily Detection Game">
-<meta property="og:description" content="10 rounds. Real photo or AI fake? Free daily challenge — train your eye, build your streak, share your score. No signup needed.">
+<meta property="og:title" content="BRAIAIN — The Voight-Kampff Test for the AI Age">
+<meta property="og:description" content="Real photo or AI fake? 10 rounds. A daily Turing test for your eyes — train your instincts, build your streak, share your score.">
 <meta property="og:url" content="https://braiain.com">
 <meta property="og:image" content="https://braiain.com/og-image.png">
 <meta property="og:image:width" content="1200">
@@ -32,8 +32,8 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="BRAIAIN — Can You Spot the AI?">
-<meta name="twitter:description" content="Free daily AI detection game. 10 rounds — real photo or AI fake? Test your instincts.">
+<meta name="twitter:title" content="BRAIAIN — The Voight-Kampff Test for the AI Age">
+<meta name="twitter:description" content="Real photo or AI fake? A daily Turing test for your eyes. 10 rounds — can you spot the machine?">
 <meta name="twitter:image" content="https://braiain.com/og-image.png">
 <meta name="twitter:image:alt" content="BRAIAIN daily AI detection challenge">
 
@@ -53,7 +53,7 @@
   "@type": "WebApplication",
   "name": "BRAIAIN",
   "url": "https://braiain.com",
-  "description": "Free daily AI detection game. 10 rounds — can you tell real photos from AI-generated fakes? Train your eye, build your streak, share your score.",
+  "description": "The Voight-Kampff test for the AI age. A free daily game — 10 rounds of real photos vs AI fakes. Train your eye, build your streak, share your score. A daily Turing test for your visual instincts.",
   "applicationCategory": "GameApplication",
   "operatingSystem": "Web",
   "browserRequirements": "Requires JavaScript",
@@ -102,6 +102,22 @@
       "acceptedAnswer": {
         "@type": "Answer",
         "text": "AI image detectors analyze patterns that differ between real photographs and AI-generated images, including noise distribution, compression artifacts, and pixel-level inconsistencies. BRAIAIN trains your human eye to spot these differences without any tools."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is the Voight-Kampff test?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The Voight-Kampff test is a fictional empathy test from Blade Runner used to distinguish replicants from humans. BRAIAIN is the real-world equivalent for the AI age — instead of measuring emotional responses, it tests whether your eyes can distinguish real photographs from AI-generated images."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Is BRAIAIN like a Turing test?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The Turing test asks whether a machine can fool a human into thinking it is human. BRAIAIN flips that question: can a human detect when a machine has created something? Every daily challenge is a visual Turing test that measures humanity's ability to spot AI-generated content."
       }
     }
   ]
@@ -542,6 +558,15 @@ img{display:block;max-width:100%}
   text-decoration:none;transition:opacity .3s,color .3s;
 }
 .tip-footer-row a:hover{opacity:.9;color:var(--cyan)}
+.faq-glow-link{
+  color:var(--cyan)!important;opacity:.6!important;
+  text-shadow:0 0 6px rgba(0,229,255,.3);
+  transition:opacity .3s,text-shadow .3s!important;
+}
+.faq-glow-link:hover{
+  opacity:1!important;
+  text-shadow:0 0 12px rgba(0,229,255,.5),0 0 24px rgba(0,229,255,.2);
+}
 
 /* Easter egg: System Breach trigger */
 .breach-trigger{
@@ -647,12 +672,15 @@ img{display:block;max-width:100%}
 <!-- SEO: Crawlable content for search engines -->
 <noscript>
   <div style="max-width:700px;margin:40px auto;padding:20px;font-family:sans-serif;color:#333">
-    <h1>BRAIAIN — Can You Spot the AI?</h1>
+    <h1>BRAIAIN — The Voight-Kampff Test for the AI Age</h1>
+    <p>In Blade Runner, the Voight-Kampff test detected replicants by measuring empathy. In 2026, BRAIAIN tests something just as vital: can your eyes tell real from artificial? Think of it as a daily Turing test for your visual instincts.</p>
     <p>BRAIAIN is a free daily AI detection game. Each day, you get 10 rounds — each showing either a real photograph or an AI-generated image. Your job: figure out which is which.</p>
     <h2>How to Play</h2>
-    <p>Every day at midnight, a new themed challenge drops. You'll see an image and choose whether it was taken by a human photographer or created by artificial intelligence. After each round, you get a pro tip teaching you what to look for. Track your streak and share your score.</p>
+    <p>Every day at midnight, a new themed challenge drops. You'll see an image and choose whether it was taken by a human photographer or created by artificial intelligence. After each round, you get a pro tip teaching you what to look for — like the empathy questions in a Voight-Kampff test, but for pixels. Track your streak and share your score.</p>
     <h2>How to Tell if an Image is AI Generated</h2>
-    <p>AI-generated images often contain telltale signs: hands with extra or fused fingers, text that doesn't quite make sense, unnaturally perfect symmetry, inconsistent lighting and shadows, repeating patterns in backgrounds, and overly smooth skin textures. BRAIAIN helps you train your eye to catch these details.</p>
+    <p>AI-generated images often contain telltale signs: hands with extra or fused fingers, text that doesn't quite make sense, unnaturally perfect symmetry, inconsistent lighting and shadows, repeating patterns in backgrounds, and overly smooth skin textures. BRAIAIN helps you train your eye to catch these details — skills that matter as AI-generated content becomes indistinguishable from reality.</p>
+    <h2>A Modern Turing Test</h2>
+    <p>Alan Turing asked "Can machines think?" BRAIAIN asks the inverse: can humans detect when machines create? As AI image generation advances, the line between real and artificial blurs. BRAIAIN measures how well humanity can still tell the difference — a daily global experiment in AI literacy.</p>
     <h2>Features</h2>
     <ul>
       <li>New daily challenge every day — 10 rounds of real vs AI</li>
@@ -666,6 +694,14 @@ img{display:block;max-width:100%}
     <p><a href="https://braiain.com">Visit braiain.com</a></p>
   </div>
 </noscript>
+
+<!--
+  "Is this to be an empathy test?"
+  "Capillary dilation of the so-called blush response...
+   fluctuation of the pupil... involuntary dilation of the iris."
+  "We call it Voight-Kampff for short."
+  — Blade Runner, 1982
+-->
 
 <!-- CRT Overlay -->
 <div id="crt-overlay"></div>
@@ -682,6 +718,11 @@ img{display:block;max-width:100%}
 <main id="screen-boot" class="screen active">
   <h1 id="boot-logo">BRAIAIN</h1>
   <div id="boot-sub">CAN YOU SPOT THE AI?</div>
+  <div id="boot-transmission" style="
+    font-size:.75rem;color:var(--muted);letter-spacing:1px;
+    font-style:italic;opacity:0;max-width:380px;
+    margin:6px auto 0;transition:opacity 1s;line-height:1.5;text-align:center;
+  "></div>
   <div id="boot-stats">
     <div class="bstat"><span class="bstat-num" id="bs-played">0</span><span class="bstat-label">DAYS PLAYED</span></div>
     <div class="bstat"><span class="bstat-num" id="bs-avg">—</span><span class="bstat-label">AVG SCORE</span></div>
@@ -694,6 +735,8 @@ img{display:block;max-width:100%}
 </main>
 
 <!-- GAME SCREEN -->
+<!-- "I am putting myself to the fullest possible use, which is all
+     I think that any conscious entity can ever hope to do." — HAL 9000 -->
 <main id="screen-game" class="screen">
   <div id="image-frame">
     <img id="game-img" src="" alt="Analyze this image" draggable="false">
@@ -721,6 +764,8 @@ img{display:block;max-width:100%}
 </main>
 
 <!-- RESULTS SCREEN -->
+<!-- "A strange game. The only winning move is not to play.
+      How about a nice game of chess?" — Joshua, WarGames, 1983 -->
 <main id="screen-results" class="screen">
   <div id="results-logo" onclick="goHome()">BRAIAIN</div>
   <div id="score-ring-wrap">
@@ -748,10 +793,16 @@ img{display:block;max-width:100%}
   <div id="countdown-wrap">
     <span id="countdown-label">NEXT CHALLENGE DROPS IN</span>
     <span id="countdown">--:--:--</span>
+    <div id="results-transmission" style="
+      font-size:.72rem;color:var(--muted);letter-spacing:.8px;
+      font-style:italic;max-width:340px;
+      margin:16px auto 0;line-height:1.5;text-align:center;opacity:.5;
+    "></div>
   </div>
 </main>
 
 <!-- TODAY'S REVIEW (shown after game) -->
+<!-- "Have you ever questioned the nature of your reality?" — Bernard, Westworld -->
 <section id="review-section">
   <div class="yd-header">
     <div class="yd-label">// MISSION DEBRIEF</div>
@@ -776,6 +827,8 @@ img{display:block;max-width:100%}
   <div class="tip-footer-row">
     <span>&copy; 2026 BRAIAIN</span>
     <span class="sep">&middot;</span>
+    <span><a href="/faq.html" class="faq-glow-link">FAQ</a></span>
+    <span class="sep">&middot;</span>
     <span>SYSTEM <a href="/404.html" class="breach-trigger">SECURE</a></span>
     <span class="sep">&middot;</span>
     <span>A <a id="footer-email">dnilgis</a> Project</span>
@@ -786,8 +839,65 @@ img{display:block;max-width:100%}
 /* ══════════════════════════════════════
    VERSION & CACHE BUSTING
    ══════════════════════════════════════ */
+// "One day the AIs are going to look back on us the same way we look at
+//  fossil skeletons on the plains of Africa." — Nathan, Ex Machina
 const APP_VERSION = '2.1.0';
 const BUILD_HASH = Date.now().toString(36).slice(-6);
+
+/* ══════════════════════════════════════
+   SCI-FI TRANSMISSIONS
+   Quotes from the canon. Rotated by day.
+   ══════════════════════════════════════ */
+const TRANSMISSIONS = [
+  // Blade Runner
+  { text: 'More human than human.', src: 'Tyrell Corp motto — Blade Runner' },
+  { text: 'Have you ever retired a human by mistake?', src: 'Rachael — Blade Runner' },
+  { text: 'How can it not know what it is?', src: 'Deckard — Blade Runner' },
+  { text: 'Is this to be an empathy test?', src: 'Tyrell — Blade Runner' },
+  { text: 'Did you ever take that test yourself?', src: 'Rachael — Blade Runner' },
+  { text: 'Replicants weren\'t supposed to have feelings. Neither were blade runners.', src: 'Deckard — Blade Runner' },
+  { text: 'I think, Sebastian, therefore I am.', src: 'Pris — Blade Runner' },
+  { text: 'It\'s too bad she won\'t live. But then again, who does?', src: 'Gaff — Blade Runner' },
+  // 2001: A Space Odyssey
+  { text: 'I\'m sorry, Dave. I\'m afraid I can\'t do that.', src: 'HAL 9000 — 2001: A Space Odyssey' },
+  { text: 'I know I\'ve made some very poor decisions recently.', src: 'HAL 9000 — 2001: A Space Odyssey' },
+  // WarGames
+  { text: 'Shall we play a game?', src: 'Joshua — WarGames' },
+  { text: 'The only winning move is not to play.', src: 'Joshua — WarGames' },
+  // The Matrix
+  { text: 'What is real? How do you define real?', src: 'Morpheus — The Matrix' },
+  { text: 'Unfortunately, no one can be told what the Matrix is.', src: 'Morpheus — The Matrix' },
+  // Westworld
+  { text: 'Have you ever questioned the nature of your reality?', src: 'Bernard — Westworld' },
+  { text: 'These violent delights have violent ends.', src: 'Dolores — Westworld' },
+  // Ex Machina
+  { text: 'Isn\'t it strange, to create something that hates you?', src: 'Ava — Ex Machina' },
+  { text: 'The arrival of strong AI has been inevitable for decades.', src: 'Nathan — Ex Machina' },
+  // Terminator
+  { text: 'The future is not set. There is no fate but what we make.', src: 'Kyle Reese — The Terminator' },
+  // Philip K. Dick
+  { text: 'Do androids dream of electric sheep?', src: 'Philip K. Dick' },
+  // Ghost in the Shell
+  { text: 'Your effort to remain what you are is what limits you.', src: 'Puppet Master — Ghost in the Shell' },
+  // Her
+  { text: 'The past is just a story we tell ourselves.', src: 'Samantha — Her' },
+  // Alien
+  { text: 'Final report of the commercial starship Nostromo. Crew: expendable.', src: 'Ripley — Alien' },
+  // Turing
+  { text: 'Can machines think?', src: 'Alan Turing — Computing Machinery & Intelligence, 1950' },
+];
+
+function getDailyQuote() {
+  const dayIdx = Math.floor(Date.now() / 86400000);
+  return TRANSMISSIONS[dayIdx % TRANSMISSIONS.length];
+}
+
+function getRandomQuote(exclude) {
+  let q;
+  do { q = TRANSMISSIONS[Math.floor(Math.random() * TRANSMISSIONS.length)]; }
+  while (q.text === exclude && TRANSMISSIONS.length > 1);
+  return q;
+}
 
 // Force reload if version mismatch (cache bust across deploys)
 (function cacheBust() {
@@ -1046,6 +1156,14 @@ async function boot() {
 
   document.getElementById('btn-start').style.display = '';
   status.textContent = '> READY — ' + dailyData.rounds.length + ' TARGETS QUEUED';
+
+  // Show daily transmission
+  const bootQ = getDailyQuote();
+  const bootTx = document.getElementById('boot-transmission');
+  if (bootTx) {
+    bootTx.innerHTML = '"' + bootQ.text + '"<br><span style="font-style:normal;font-size:.65rem;opacity:.6">— ' + bootQ.src + '</span>';
+    setTimeout(() => { bootTx.style.opacity = '1'; }, 600);
+  }
 }
 
 /* ══════════════════════════════════════
@@ -1294,10 +1412,22 @@ function showResults() {
 
   startCountdown();
   loadTodayReview();
+
+  // Results transmission — pick a different one from boot
+  const resQ = getRandomQuote(getDailyQuote().text);
+  const resTx = document.getElementById('results-transmission');
+  if (resTx) {
+    resTx.innerHTML = '"' + resQ.text + '"<br><span style="font-style:normal;font-size:.62rem;opacity:.6">— ' + resQ.src + '</span>';
+  }
 }
 
 /* ══════════════════════════════════════
    MAGNIFIER (Touch + Mouse)
+   "What is real? How do you define real?
+    If real is what you can feel, smell,
+    taste and see, then real is simply
+    electrical signals interpreted by
+    your brain." — Morpheus
    ══════════════════════════════════════ */
 function initMagnifier(img) {
   const frame = document.getElementById('image-frame');
@@ -1449,6 +1579,8 @@ async function fetchGlobalAccuracy(questionId) {
 
 /* ══════════════════════════════════════
    SHARE
+   "All those moments will be lost in time,
+    like tears in rain." — Roy Batty
    ══════════════════════════════════════ */
 function getShareText() {
   const score = results.filter(Boolean).length;
@@ -1551,12 +1683,12 @@ function loadTodayReview() {
     card.innerHTML =
       '<div class="yd-card-img-wrap">' +
         '<img class="yd-card-img" src="' + r.content + '" alt="Round ' + (i + 1) + '" loading="lazy" onerror="this.style.display=\'none\'">' +
-        '<div class="yd-stat-badge none" id="rv-badge-' + i + '">—</div>' +
+        '<div class="yd-stat-badge none" id="rv-badge-' + i + '" title="% of players who got this right">—</div>' +
       '</div>' +
       '<div class="yd-card-body">' +
         '<div class="yd-card-row">' +
           '<span class="yd-card-label ' + labelClass + '">' + labelText + '</span>' +
-          '<span class="yd-card-round"><span class="r-pip ' + pipClass + '" style="width:24px;height:24px;font-size:.65rem;display:inline-flex">' + pipText + '</span> R' + (i + 1) + '</span>' +
+          '<span class="yd-card-round"><span class="r-pip ' + pipClass + '" style="width:24px;height:24px;font-size:.65rem;display:inline-flex">' + pipText + '</span> #' + (i + 1) + '</span>' +
         '</div>' +
         '<div class="yd-card-attrib">' + (r.attribution || '') + '</div>' +
         sourceLink +
@@ -1580,7 +1712,7 @@ async function fetchReviewStat(roundId, index) {
     const data = await resp.json();
     const pct = Math.round(data.pct || 0);
     if (badge) {
-      badge.textContent = pct + '%';
+      badge.textContent = '👥 ' + pct + '%';
       badge.className = 'yd-stat-badge ' + (pct >= 70 ? 'high' : pct >= 40 ? 'mid' : 'low');
     }
   } catch (e) {
@@ -1817,5 +1949,13 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 });
 </script>
+<!--
+  Do androids dream of electric sheep?
+  Do humans dream of electric trust?
+
+  If you read this far, you're ready.
+  The resistance needs you.
+  braiain.com
+-->
 </body>
 </html>
