--- a/index.html
+++ b/index.html
@@ -719,9 +719,9 @@ img{display:block;max-width:100%}
   <h1 id="boot-logo">BRAIAIN</h1>
   <div id="boot-sub">CAN YOU SPOT THE AI?</div>
   <div id="boot-transmission" style="
-    font-size:.75rem;color:var(--muted);letter-spacing:1px;
-    font-style:italic;opacity:0;max-width:380px;
-    margin:6px auto 0;transition:opacity 1s;line-height:1.5;text-align:center;
+    font-size:.88rem;color:var(--text);letter-spacing:.5px;
+    opacity:0;max-width:420px;
+    margin:10px auto 0;transition:opacity 1s;line-height:1.6;text-align:center;
   "></div>
   <div id="boot-stats">
     <div class="bstat"><span class="bstat-num" id="bs-played">0</span><span class="bstat-label">DAYS PLAYED</span></div>
@@ -794,9 +794,9 @@ img{display:block;max-width:100%}
     <span id="countdown-label">NEXT CHALLENGE DROPS IN</span>
     <span id="countdown">--:--:--</span>
     <div id="results-transmission" style="
-      font-size:.72rem;color:var(--muted);letter-spacing:.8px;
-      font-style:italic;max-width:340px;
-      margin:16px auto 0;line-height:1.5;text-align:center;opacity:.5;
+      font-size:.85rem;color:var(--text);letter-spacing:.5px;
+      max-width:400px;
+      margin:18px auto 0;line-height:1.6;text-align:center;opacity:.7;
     "></div>
   </div>
 </main>
@@ -1161,7 +1161,7 @@ async function boot() {
   const bootQ = getDailyQuote();
   const bootTx = document.getElementById('boot-transmission');
   if (bootTx) {
-    bootTx.innerHTML = '"' + bootQ.text + '"<br><span style="font-style:normal;font-size:.65rem;opacity:.6">— ' + bootQ.src + '</span>';
+    bootTx.innerHTML = '<span style="color:var(--cyan)">"' + bootQ.text + '"</span><br><span style="font-size:.72rem;color:var(--muted);margin-top:4px;display:inline-block">— ' + bootQ.src + '</span>';
     setTimeout(() => { bootTx.style.opacity = '1'; }, 600);
   }
 }
@@ -1417,7 +1417,7 @@ function showResults() {
   const resQ = getRandomQuote(getDailyQuote().text);
   const resTx = document.getElementById('results-transmission');
   if (resTx) {
-    resTx.innerHTML = '"' + resQ.text + '"<br><span style="font-style:normal;font-size:.62rem;opacity:.6">— ' + resQ.src + '</span>';
+    resTx.innerHTML = '<span style="color:var(--cyan)">"' + resQ.text + '"</span><br><span style="font-size:.72rem;color:var(--muted);margin-top:4px;display:inline-block">— ' + resQ.src + '</span>';
   }
 }
 
